<resources>
    <string name="app_name">News Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings_from_date_label">From Date</string>
    <string name="settings_from_date_key" translatable="false">from_date</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>


    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="opinion">Opinion</string>
    <string name="sport">Sport</string>
    <string name="culture">Culture</string>
    <string name="life_and_style">Life and Style</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_title">News Settings</string>
</resources>
