<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_opinion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/opinion" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sport" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/culture" />

        <item
            android:id="@+id/nav_lifestyle"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/life_and_style" />
    </group>

</menu>
